// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/components/AuditResultMessage render snap when auditResult is {} 1`] = `
<body>
  <div>
    <div
      class="custom-class-name css-1avyf41"
    >
      <span
        class="icon-wrapper"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM9.16925 13.3334L15.0609 7.44092L13.8826 6.26258L9.16925 10.9767L6.81175 8.61925L5.63341 9.79758L9.16925 13.3334Z"
            fill="#41BF9A"
          />
        </svg>
      </span>
      <span
        class="text-wrapper"
      >
        审核通过
      </span>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is UNKNOWN 1`] = `
<body>
  <div>
    <div
      class=" css-30pox0"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM9.16925 13.3334L15.0609 7.44092L13.8826 6.26258L9.16925 10.9767L6.81175 8.61925L5.63341 9.79758L9.16925 13.3334Z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        >
          审核通过
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is UNKNOWN 2`] = `
<body>
  <div>
    <div
      class=" css-30pox0"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM9.16925 13.3334L15.0609 7.44092L13.8826 6.26258L9.16925 10.9767L6.81175 8.61925L5.63341 9.79758L9.16925 13.3334Z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        >
          审核通过
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is empty 1`] = `
<body>
  <div>
    <div
      class=" css-30pox0"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM9.16925 13.3334L15.0609 7.44092L13.8826 6.26258L9.16925 10.9767L6.81175 8.61925L5.63341 9.79758L9.16925 13.3334Z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is error 1`] = `
<body>
  <div>
    <div
      class=" css-30pox0"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="close-circle-fill"
            >
              <path
                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                fill="#F66074"
                id="Vector"
              />
            </g>
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is normal 1`] = `
<body>
  <div>
    <div
      class=" css-30pox0"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM9.16925 13.3334L15.0609 7.44092L13.8826 6.26258L9.16925 10.9767L6.81175 8.61925L5.63341 9.79758L9.16925 13.3334Z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        >
          审核通过
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is notice 1`] = `
<body>
  <div>
    <div
      class=" css-30pox0"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="spam-2-fill"
            >
              <path
                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                fill="#6094FC"
                id="Vector"
              />
            </g>
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has diff level render snap when level is warn 1`] = `
<body>
  <div>
    <div
      class=" css-30pox0"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.7209 2.50006L18.6594 16.2501C18.8896 16.6487 18.753 17.1583 18.3544 17.3884C18.2277 17.4616 18.0841 17.5001 17.9377 17.5001H2.06063C1.60039 17.5001 1.22729 17.127 1.22729 16.6668C1.22729 16.5204 1.26579 16.3768 1.33894 16.2501L9.2775 2.50006C9.50766 2.10148 10.0172 1.96492 10.4158 2.19504C10.5426 2.26818 10.6477 2.37338 10.7209 2.50006ZM9.16583 13.3334V15.0001H10.8325V13.3334H9.16583ZM9.16583 7.50006V11.6668H10.8325V7.50006H9.16583Z"
              fill="#EBAD1C"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when has more link 1`] = `
<body>
  <div>
    <div
      class=" css-30pox0"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM9.16925 13.3334L15.0609 7.44092L13.8826 6.26258L9.16925 10.9767L6.81175 8.61925L5.63341 9.79758L9.16925 13.3334Z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
      <div
        class="annotation-wrapper"
      >
        annotation text
        <a
          class="ant-typography css-dev-only-do-not-override-txh9fw"
          href="this is a link"
          rel="noopener noreferrer"
          target="_blank"
        >
          查看更多
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/components/AuditResultMessage render snap when showAnnotation 1`] = `
<body>
  <div>
    <div
      class=" css-30pox0"
    >
      <div
        class="css-1avyf41"
      >
        <span
          class="icon-wrapper"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM9.16925 13.3334L15.0609 7.44092L13.8826 6.26258L9.16925 10.9767L6.81175 8.61925L5.63341 9.79758L9.16925 13.3334Z"
              fill="#41BF9A"
            />
          </svg>
        </span>
        <span
          class="text-wrapper"
        />
      </div>
      <div
        class="annotation-wrapper"
      >
        annotation text
      </div>
    </div>
  </div>
</body>
`;
